WIP: Add add/remove funcs
Something's wrong with the DELETE one - doesn't properly set the id
parameter for delete_timer
